Hice al código un poco más lindo

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="shortcut icon" href="{{ url_for('static', filename='images/thunder.ico') }}" type="image/x-icon">
-  <title>{% block title %}{% endblock %} - FiveStrikes</title>
+  <title>{% block title %}{% endblock %} - FlashLightning</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                    <li class="sidebar-brand"> <a href="/" style="color: #e3212;"><i class="fas fa-poo-storm"></i> FiveStrikes</a></li>
+                    <li class="sidebar-brand"> <a href="/" style="color: #e3212;"><i class="fas fa-bolt"></i> FlashLightning</a></li>
                     <!-- <li> <a class="{% if sidebar == 'catalog' %}active{% endif %}" href="/">Directorio</a> </li>
                     <li> <a class="{% if sidebar == 'contact' %}active{% endif %}" href="/contact">Contacto</a> </li>-->
                     <center>
