--- a/templates/helpme.html
+++ b/templates/helpme.html
@@ -31,7 +31,7 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li class="">Si tenés manejás Flask, nos podrías ayudar 
+              <li>Si tenés manejás Flask, nos podrías ayudar 
                   con nuevas funciones para implementar.</li>
               <li>Comentando el código y haciendolo más lindo.</li>
             </ul>
