Solucioné view y upload.

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
                       <a class="dropdown-item" href="/rules">Reglas</a>
                       <a class="dropdown-item" href="/contact">Contacto</a>
                       <a class="dropdown-item" href="/faq">FAQ</a>
-                      <a class="dropdown-item" href="/services">Ayudar</a>
+                      <a class="dropdown-item" href="/helpme">Ayudar</a>
                   </div>
               </li>
 						</ul>
