--- a/templates/upload.html
+++ b/templates/upload.html
@@ -25,6 +25,7 @@
               {{ render_field(form.category, class='form-control') }}
               {{ form.tags.label }}
 							{{ render_field(form.tags, class='form-control') }}
+              <input id="asdf" placeholder="YouTube Embed (todavía no funciona)" class="form-control" type="text"/><br/>
               {{ form.hidden }} {{ form.hidden.label }}
             </dl>
             <div class="text-center">
