--- a/templates/upload.html
+++ b/templates/upload.html
@@ -10,17 +10,18 @@
           <hr>
           <form method="post" enctype="multipart/form-data">
             <dl>
-              {{ render_field(form.subject, class='form-control', placeholder='Subject') }}
+              {{ form.subject.label }}
+              {{ render_field(form.subject, class='form-control', placeholder='Título') }}
               {{ form.files.label }}
               {{ render_field(form.files, class='form-control', onChange="loadFile(event)") }}
               <strong>
                 <ul id="fileList" style="">
                   <li style="">
-                    No hay archivos seleccionados.
+                    No seleccionaste ningún archivo.
                   </li>
                 </ul>
               </strong>
-              {{ render_field(form.desc, class='form-control', placeholder='Description', cols="35", rows="15") }}
+              {{ render_field(form.desc, class='form-control', placeholder='Descripción', cols="35", rows="15") }}
               {{ form.category.label }}
               {{ render_field(form.category, class='form-control') }}
               {{ form.tags.label }}
