--- a/templates/view.html
+++ b/templates/view.html
@@ -7,10 +7,9 @@
   <div class="container-fluid">
     <div class="mx-auto" style="width: 60%;">
         <h3>Comentar</h3>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
+          {{ render_field(form.file, class='form-control') }}
           {{ render_field(form.comment, class='form-control', placeholder='Comentario') }}
-          {{ form.files.label }}
-          {{ render_field(form.files, class='form-control') }}
           {{ render_field(form.csrf_token) }}
           {{ render_field(form.submit, class='form-control btn btn-danger') }}
         </form>
@@ -49,7 +48,17 @@
       <hr/>
       {% for c in comments %}
         <div style="box-shadow: 3px 3px solid lightblue; margin-bottom: 15px; padding: 30px; width: 80%; background-color: #222;">
-          <a href="/user/{{ c.user.username }}">{{c.user.username}}</a> {{c.created_date.strftime("%d/%m/%y (%A) %H:%M:%S")}} No. <a href="#" onclick="javascript:alert('esto va a servir para citar a alguien')">{{c.id}}</a>:<br/>
+          <a href="/user/{{ c.user.username }}">{{c.user.username}}</a> {{c.created_date.strftime("%d/%m/%y (%A) %H:%M:%S")}} No. <a href="#" onclick="javascript:alert('esto va a servir para citar a alguien')">{{c.id}}</a> | <a href="/delete/comment/{{c.id}}?id={{post.id}}">X</a><br/>
+          {% if c.file_ext in ('jpg', 'gif', 'jpeg', 'png') %}
+            <a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{c.filename}}">
+              <img height=100 src="{{ url_for ('static', filename='user_data/images/')}}{{c.filename}}"/>
+            </a>
+          {% elif c.file_ext in ('webm', 'mp4') %}
+            <a target="_blank" href="{{ url_for ('static', filename='user_data/images/')}}{{c.filename}}">
+              <video height=100 src="{{ url_for ('static', filename='user_data/images/')}}{{c.filename}}"/>
+            </a>
+          {% endif %}
+          <br/>
           {{  c.comment }}<br/>
         </div>
           {% else %}
