--- a/templates/view.html
+++ b/templates/view.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% from "_formhelpers.html" import render_field %}
 
-<h1>{% block title %}Acerca de nosotros{% endblock %}</h1>
+<h1>{% block title %}{{post.subject}}{% endblock %}</h1>
 
 {% block content %}
   <div class="container-fluid">
-    <div class="mx-auto" style="width: 60%;">
+    <div class="mx-auto" style="width: 40%;">
         <h3>Comentar</h3>
         <form method="post" enctype="multipart/form-data">
           {{ render_field(form.file, class='form-control') }}
@@ -36,7 +36,7 @@
           {% endif %}
         {% endfor %}
       <div class="d-flex justify-content-between ">
-        <pre>{{post.desc}}</pre>
+        <p>{{post.desc|safe}}</p>
         <!-- Tengo que detectar la extensión para saber si muestro un video o una imágen -->
       </div>
       <b>{{post.total_thanks}} agradecimiento(s)</b><br/>
@@ -59,7 +59,7 @@
             </a>
           {% endif %}
           <br/>
-          {{  c.comment }}<br/>
+          {{  c.comment|safe }}<br/>
         </div>
           {% else %}
           <p>Todavía no hay comentarios.</p>
